Fix bandwidth estimation on remoting webrtc

The socket factory implementation on remoting was incorrectly
providing millisecond timestamps for updating the absolute time
RTP extension and this was the cause of the broken bandwidth
estimation on both the tests and the implementation.

On the test, I see significant improvements in the overall latency
numbers. The test itself is still not entirely correct due to
the way the frame ids are handled.

BUG=601713

TEST results:

Previously:

Average latency for big frames: 1562.03
Average latency for small frames: 1245.65

Bandwidth fix (with local test fix for unique frame id):

Average latency (ms): 73.851 average loss (%): 0
Average latency for big frames: 277.975
Average latency for small frames: 76.221

Review URL: https://codereview.chromium.org/1866283004

Cr-Commit-Position: refs/heads/master@{#386108}

Former-commit-id: 3943d65cbc744467a489b7013cd736025851ef24