remoting/test/fake_socket_factory.cc
@@ -120,7 +120,7 @@ int FakeUdpSocket::SendTo(const void* data, size_t data_size,
   cricket::ApplyPacketOptions(
       reinterpret_cast<uint8_t*>(buffer->data()), data_size,
       options.packet_time_params,
-      (base::TimeTicks::Now() - base::TimeTicks()).InMilliseconds());
+      (base::TimeTicks::Now() - base::TimeTicks()).InMicroseconds());
   dispatcher_->DeliverPacket(local_address_, address, buffer, data_size);
   return data_size;
 }
